# Assertify

./: .gitignore  CMakeLists.txt  README.md
bench/: dummy_bench.cpp
examples/: example1.cpp
include/: assertify.hpp
include/assertify/: assertify.hpp
src/: CMakeLists.txt  assertify.cpp  main.cpp
test/: assertion_error_test_f.cpp  assertion_test_f.cpp  basic_mem_pool.test.cpp  concept_and_type_aliasses.cpp  concurrent_perofrmance_counter.cpp  equality.cpp  formatter_test.cpp  static_analyzer_test.cpp  string_algorithm_test.cpp  test_assert_error_class.cpp  test_long_jump_style_assert.cpp  test_main.cpp
